--- a/dz8/consul_playbook.yml
+++ b/dz8/consul_playbook.yml
@@ -62,37 +62,56 @@
   tasks:
     - name: create consul.json
       ansible.builtin.copy:
-        dest: /etc/consul.d/consul.json
+        dest: /etc/consul.d/config.json
         owner: consul
         group: consul
         content: |
           {
-            "server": true,
+            "bind_addr": "0.0.0.0",
+            "bootstrap_expect": 3,
+            "client_addr": "0.0.0.0",
+            "datacenter": "dc1",
             "node_name": "{{ inventory_hostname_short }}",
-            "ui_config": {
-              "enabled": true
+            "data_dir": "/var/lib/consul",
+            "domain": "consul",
+            "enable_local_script_checks": true,
+            "dns_config": {
+                "enable_truncate": true,
+                "only_passing": true
             },
-            "data_dir": "/opt/consul",
-            "retry_join": [{{ groups['db'] | difference([inventory_hostname]) | map('to_json') | join(',') }}]
+            "enable_syslog": true,
+            "encrypt": "wHFWVHTstpfh08ZflUs4FD2FAMueraoCN2LyqmeLxV0=",
+            "leave_on_terminate": true,
+            "log_level": "INFO",
+            "rejoin_after_leave": true,
+            "retry_join": [{{ groups['db'] | map('to_json') | join(',') }}],
+            "server": true,
+            "start_join": [{{ groups['db'] | map('to_json') | join(',') }}],
+            "ui_config": { "enabled": true }
           }
     - name: systemd service
       ansible.builtin.copy:
         dest: /etc/systemd/system/consul.service
         content: |
           [Unit]
-          Description=Consul
-          After=network.target
+          Description=Consul Service Discovery Agent
+          Documentation=https://www.consul.io/
+          After=network-online.target
+          Wants=network-online.target
 
           [Service]
           Type=simple
           User=consul
           Group=consul
           ExecStart=/usr/local/bin/consul agent -config-dir=/etc/consul.d
-          WorkingDirectory=/opt/consul
-          Restart=always
+          ExecReload=/bin/kill -HUP $MAINPID
+          KillSignal=SIGINT
+          TimeoutStopSec=5
+          Restart=on-failure
+          SyslogIdentifier=consul
 
           [Install]
-          WantedBy=default.target
+          WantedBy=multi-user.target
     - ansible.builtin.systemd:
         name: consul
         state: restarted
