--- a/dz8/consul_playbook.yml
+++ b/dz8/consul_playbook.yml
@@ -165,7 +165,7 @@
           Type=simple
           User=consul
           Group=consul
-          ExecStart=/usr/local/bin/consul agent -dev -config-dir=/etc/consul.d
+          ExecStart=/usr/local/bin/consul agent -config-dir=/etc/consul.d
           ExecReload=/bin/kill -HUP $MAINPID
           KillSignal=SIGINT
           TimeoutStopSec=5
