--- a/dz8/consul_playbook.yml
+++ b/dz8/consul_playbook.yml
@@ -70,23 +70,11 @@
             "bind_addr": "0.0.0.0",
             "bootstrap_expect": 3,
             "client_addr": "0.0.0.0",
-            "datacenter": "dc1",
             "node_name": "{{ inventory_hostname_short }}",
             "data_dir": "/var/lib/consul",
-            "domain": "consul",
-            "enable_local_script_checks": true,
-            "dns_config": {
-                "enable_truncate": true,
-                "only_passing": true
-            },
-            "enable_syslog": true,
             "encrypt": "wHFWVHTstpfh08ZflUs4FD2FAMueraoCN2LyqmeLxV0=",
-            "leave_on_terminate": true,
-            "log_level": "INFO",
-            "rejoin_after_leave": true,
             "retry_join": [{{ groups['db'] | map('to_json') | join(',') }}],
             "server": true,
-            "start_join": [{{ groups['db'] | map('to_json') | join(',') }}],
             "ui_config": { "enabled": true }
           }
     - name: systemd service
@@ -133,23 +121,10 @@
             "bind_addr": "0.0.0.0",
             "bootstrap_expect": 0,
             "client_addr": "0.0.0.0",
-            "datacenter": "dc1",
             "node_name": "{{ inventory_hostname_short }}",
             "data_dir": "/var/lib/consul",
-            "domain": "consul",
-            "enable_local_script_checks": true,
-            "dns_config": {
-                "enable_truncate": true,
-                "only_passing": true
-            },
-            "enable_syslog": true,
             "encrypt": "wHFWVHTstpfh08ZflUs4FD2FAMueraoCN2LyqmeLxV0=",
-            "leave_on_terminate": true,
-            "log_level": "INFO",
-            "rejoin_after_leave": true,
-            "retry_join": [{{ groups['db'] | map('to_json') | join(',') }}],
-            "server": false,
-            "start_join": [{{ groups['db'] | map('to_json') | join(',') }}],
+            "retry_join": [{{ groups['db'] | map('to_json') | join(',') }}]
           }
     - name: systemd service
       ansible.builtin.copy:
