--- a/dz8/consul_playbook.yml
+++ b/dz8/consul_playbook.yml
@@ -71,6 +71,7 @@
         group: consul
         content: |
           {
+            "bootstrap_expect": 2,
             "client_addr": "0.0.0.0",
             "node_name": "{{ inventory_hostname_short }}",
             "data_dir": "/var/lib/consul",
